Implement loading of `MONDO`, `HPO`, `GENO`, and `UBERON`.
Signed-off-by: Daniel Danis <daniel.gordon.danis@protonmail.com>